Add blocker is working

--- a/Popup.html
+++ b/Popup.html
@@ -13,7 +13,13 @@
         |
         <span style="color: #e50914;">Netflix</span>
         |
-        <span style="color: #e50914;">Masai</span>
+        <span style="color: #e50914;">Masai School</span>
+        |
+        <span style="color: #e50914;">Spotify</span>
+        |
+        <span style="color: #e50914;">Discord</span>
+        |
+        <span style="color: #e50914;">Roblox</span>
       </span>
     </div>
   </body>
