--- a/Popup.html
+++ b/Popup.html
@@ -13,13 +13,14 @@
         |
         <span style="color: #e50914;">Netflix</span>
         |
-        <span style="color: #e50914;">Masai School</span>
+        <span style="color: #ea6e16;">Masai School</span>
         |
-        <span style="color: #e50914;">Spotify</span>
+        <span style="color: #4cec24;">Spotify</span>
         |
-        <span style="color: #e50914;">Discord</span>
+        <span style="color: #5316ee;">Discord</span>
         |
-        <span style="color: #e50914;">Roblox</span>
+        <span style="color: #e50914;">Linkdein</span>
+        
       </span>
     </div>
   </body>
