--- a/Popup.html
+++ b/Popup.html
@@ -20,6 +20,8 @@
         <span style="color: #5316ee;">Discord</span>
         |
         <span style="color: #e50914;">Linkdein</span>
+        |
+        <span style="color:red;">Github</span>
         
       </span>
     </div>
