extensions and all css

--- a/Popup.html
+++ b/Popup.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="popup.css">
+  </head>
   <body>
     <div class="main">
-      <h1>Add Blocker</h1>
+      <h1>SiteBlocker</h1>
       <hr />
       <span>
         Current Blocked Sites:
