Description is add

--- a/Popup.html
+++ b/Popup.html
@@ -7,7 +7,7 @@
       <hr />
       <span>
         Current Blocked Sites:
-        <span style="color: #ff0100;">Youtube</span>
+        <span style="color: #ff0100;  cursor: pointer;" id="youtub">Youtube</span>
         |
         <span style="color: #0e8ef2;">Facebook</span>
         |
@@ -24,3 +24,9 @@
     </div>
   </body>
 </html>
+<script>
+document.getElementById("youtub").addEventListener("click",myfunction)
+function myfunction(){
+  console.log("hdhjhjdhjd")
+}
+</script>
